# snitch

./: CMakeLists.txt  FindEigen3.cmake  FindLibMesh.cmake  README.md  run_code.py  run_test_cases.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml
include/: BasicUtility.h  EqualNeighborHeuristic.h  GradientJumpHeuristics.h  LocalMeanHeuristics.h  MeshAmalgamationBase.h  RandomField.h  StandardDeviationHeuristics.h  ThresholdHeuristics.h
src/: BasicUtility.cpp  CMakeLists.txt  EqualNeighborHeuristic.cpp  GradientJumpHeuristics.cpp  LocalMeanHeuristics.cpp  MeshAmalgamationBase.cpp  RandomField.cpp  StandardDeviationHeuristics.cpp  ThresholdHeuristics.cpp
test_cases/: CMakeLists.txt  testEqualNeighborHeuristic.cpp  testGradientJump.cpp  testGradientJumpHeuristics.cpp  testLocalMeanHeuristics.cpp  testMeshAmalgamation.cpp  testSigmaHeuristics.cpp  testStepFunction.cpp  testThresholdHeuristics.cpp  test_step_function_along_a_line.cpp
